@@ -10,8 +10,18 @@ import java.time.LocalTime;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
+
+/**
+ * Bus Ticket Service
+ * <p>
+ * This service manages bus ticket operations including retrieving available schedules,
+ * creating bus tickets, checking seat availability, and managing bus routes and services.
+ * 
+ * @author Archibold Chimbiro
+ * @version 1.0.0
+ * @since 2026-02-04
+ */
 @Service
 @RequiredArgsConstructor
 public class BusTicketService {
@@ -21,32 +31,32 @@ public class BusTicketService {
     private final BusServiceRepository busServiceRepository;
     private final BusRouteRepository busRouteRepository;
 
-    // Get all bus tickets
+
     public List<BusTicketDTO> getAllBusTickets() {
-        List<BusSchedule> schedules = busScheduleRepository.findAllWithRouteAndService();
+        var schedules = busScheduleRepository.findAllWithRouteAndService();
         return schedules.stream()
                 .map(this::convertToDTO)
-                .collect(Collectors.toList());
+                .toList();
     }
 
-    // Create new bus ticket
+
     public BusTicketDTO createBusTicket(BusTicketDTO dto) {
-        String[] towns = validateAndSplitRoute(dto.getRoute());
-        BusService service = getOrCreateBusService(dto.getBusOperator());
-        BusRoute route = getOrCreateBusRoute(towns[0], towns[1], service, dto.getPrice());
-        BusSchedule schedule = createScheduleEntity(dto, route);
+        var towns = validateAndSplitRoute(dto.route());
+        var service = getOrCreateBusService(dto.busOperator());
+        var route = getOrCreateBusRoute(towns[0], towns[1], service, dto.price());
+        var schedule = createScheduleEntity(dto, route);
         busScheduleRepository.save(schedule);
         return convertToDTO(schedule);
     }
 
-    // Seat availability check
+
     public boolean isSeatAvailable(String ticketId, int quantity) {
-        BusSchedule schedule = (BusSchedule) busScheduleRepository.findByTicketId(ticketId)
+        var schedule = (BusSchedule) busScheduleRepository.findByTicketId(ticketId)
                 .orElseThrow(() -> new RuntimeException("Ticket not found"));
         return schedule.getAvailableSeats() >= quantity;
     }
 
-    // Helper methods
+
     private String[] validateAndSplitRoute(String route) {
         String[] towns = route.split(" to ");
         if (towns.length != 2) throw new IllegalArgumentException("Invalid route format");
@@ -70,11 +80,11 @@ public class BusTicketService {
     }
     private BusSchedule createScheduleEntity(BusTicketDTO dto, BusRoute route) {
         return BusSchedule.builder()
-                .ticketId(dto.getTicketId())
-                .travelDate(LocalDate.parse(dto.getTravelDate()))
-                .departureTime(parseTime(dto.getDepartureTime()))
-                .arrivalTime(parseTime(dto.getArrivalTime()))
-                .availableSeats(dto.getSeatAvailability())
+                .ticketId(dto.ticketId())
+                .travelDate(LocalDate.parse(dto.travelDate()))
+                .departureTime(parseTime(dto.departureTime()))
+                .arrivalTime(parseTime(dto.arrivalTime()))
+                .availableSeats(dto.seatAvailability())
                 .busRoute(route)
                 .build();
     }
